@@ -470,13 +470,18 @@ SPI NOR Flash Support List:
 127. PN25F32
 128. PN25F64
 129. PN25F128
-130. P25Q16H
-131. P25Q32H
-132. P25Q64H
-133. P25Q128H
-134. SK25P32
-135. SK25P64
-136. SK25P128
+130. P25D05H
+131. P25D10H
+132. P25D20H
+133. P25D40H
+134. P25D80H
+135. P25Q16H
+136. P25Q32H
+137. P25Q64H
+138. P25Q128H
+139. SK25P32
+140. SK25P64
+141. SK25P128
 
 I2C EEPROM Support List:
 001. 24c01
