@@ -443,6 +443,11 @@ static struct chip_info chips_data [] = {
 	{ "PN25F64",		0xe0, 0x40170000, 64 * 1024, 128, 0 },
 	{ "PN25F128",		0xe0, 0x40180000, 64 * 1024, 256, 0 },
 
+	{ "P25D05H",		0x85, 0x60100000, 64 * 1024, 1,   0 },
+	{ "P25D10H",		0x85, 0x60110000, 64 * 1024, 2,   0 },
+	{ "P25D20H",		0x85, 0x60120000, 64 * 1024, 4,   0 },
+	{ "P25D40H",		0x85, 0x60130000, 64 * 1024, 8,   0 },
+	{ "P25D80H",		0x85, 0x60140000, 64 * 1024, 16,  0 },
 	{ "P25Q16H",		0x85, 0x60150000, 64 * 1024, 32,  0 },
 	{ "P25Q32H",		0x85, 0x60160000, 64 * 1024, 64,  0 },
 	{ "P25Q64H",		0x85, 0x60170000, 64 * 1024, 128, 0 },
